--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express-async-errors": "^3.1.1",
     "jsdom": "^26.0.0",
     "mozilla-readability": "^0.1.3",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "pdf-table-extractor": "^1.0.3",
     "qr-code-styling": "^1.9.1",
     "qrcode": "^1.5.4",
     "swagger-jsdoc": "^6.2.8",
@@ -39,6 +41,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsdom": "^21.1.7",
     "@types/mozilla-readability": "^0.2.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/qrcode": "^1.5.5",
     "@types/supertest": "^6.0.2",
